# Res

./: .gitignore  config.py  dataloader.py  diffusion.py  eval.py  eval_autoencoder.py  eval_classifier.py  fine_tune_classifier.py  main.py  predictor.py  pyproject.toml  requirements.txt  sample.py  shifting_sequence.py  state.py  train.py  train_autoencoder.py  train_classifier.py  train_resshift.py
classifier/: cls_model.py
configs/: default_config.py  diffusion_with_autoencoder.py  diffusion_with_autoencoder_and_reduced_t.py  diffusion_with_grayscale.py  diffusion_with_perceptual_loss.py  diffusion_with_reduced_data.py  diffusion_with_reduced_t.py  diffusion_with_swin_attention.py  diffusion_with_us_augmentation.py
datapipe/: data_aug.py  dataloader.py  datasets.py
datapipe/transforms/: attenuation.py  gaussian_shadow.py  haze.py
diffusion/: diffusion.py  shifting_sequence.py
ema/: ema_model.py
loss/: combined_loss.py  perceptual_loss.py
models/: ema_model.py  smp_model.py  unet_simple.py
scripts/: default.sh  diffusion_with_autoencoder.sh  diffusion_with_autoencoder_and_reduced_t.sh  diffusion_with_grayscale.sh  diffusion_with_perceptual_loss.sh  diffusion_with_reduced_data.sh  diffusion_with_reduced_t.sh  diffusion_with_swin_attention.sh  diffusion_with_us_augmentation.sh
src/: main.py
src/datapipe/: data_aug.py  dataloader.py
src/diffusion/: shifting_sequence.py
src/training/: train.py
taming/models/: vqgan.py
training/: saver.py  trainer.py
upscaler/: ema_model.py  smp_model.py
upscaler/resshift_unet/: __init__.py  basic_ops.py  (+2 more)
(+1 files in other folders)
