[project]
name = "ownres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "piq>=0.8.0",
  "segmentation-models-pytorch>=0.5.0",
  "tensorboard>=2.19.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.pyright]
typeCheckingMode = "standard"
